start handling fields